# ovh-openstack-host

./: .bazelrc  .gitignore  MODULE.bazel  Makefile  README.md
ansible/playbooks/: BUILD.bazel  playbook.yml
ansible/roles/setup-k3s/: BUILD.bazel
ansible/roles/setup-k3s/defaults/: main.yml
ansible/roles/setup-k3s/tasks/: main.yml
ansible/roles/system-prepare/: BUILD.bazel
ansible/roles/system-prepare/defaults/: main.yml
ansible/roles/system-prepare/files/: kernel-modules-all.conf  kernel-modules-baremetal.conf
ansible/roles/system-prepare/handlers/: main.yml
ansible/roles/system-prepare/tasks/: main.yml  setup-apt.yml  setup-kernel.yml  setup-packages.yml
terraform/: BUILD.bazel
terraform/root-modules/host/: BUILD.bazel  README.md  main.tf  outputs.tf  variables.tf  versions.tf.json
