load("@rules_pkg//pkg:mappings.bzl", "pkg_filegroup", "pkg_files", "strip_prefix")

pkg_files(
    name = "files",
    srcs = glob([
        "*.yml",
    ]),
    strip_prefix = strip_prefix.from_root(""),
)

pkg_filegroup(
    name = "playbooks",
    srcs = [
        ":files",
        "//ansible/roles/setup-k3s",
        "//ansible/roles/system-prepare",
    ],
    visibility = ["//visibility:public"],
)
